fix: header visibility for small screens

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,3 +1,5 @@
-.img {
-    width: 80%;
+@media (min-width: 768px) {
+    .img {
+        width: 80%;
+    }
 }
